16-Gateway-API/AGC-nginx/svc-nginx1.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-1
  namespace: agc-test
  
spec:
  selector:
    app: nginx-1
  ports:
    - port: 80
      targetPort: 80
